--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,35 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.card {
+  display: flex;
+  width: 30rem;
+  height: 8rem;
+  margin: 0.2rem;
+  padding: 0.5rem;
+  border: 1px solid lightgray;
+  overflow-wrap: break-word;
+}
+
+.card__wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 80vw;
+}
+
+.card__image {
+  align-self: center;
+  height: 50px;
+}
+
+.card__content {
+  margin-left: 1rem;
+}
+
+.card__content h4,
+p {
+  margin: 0;
+}
