--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,8 @@ a {
   padding: 0.5rem;
   border: 1px solid lightgray;
   overflow-wrap: break-word;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card__wrapper {
@@ -45,4 +47,12 @@ a {
 .card__content h4,
 p {
   margin: 0;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60vw;
+  margin: auto;
 }
